# rca_bot

./: .gitignore  .replit  README.md  bot.py  config.py  handlers.py  logger.py  main.py  pyproject.toml  utils.py  vercel.json
attached_assets/: Pasted-import-asyncio-from-aiogram-import-Bot-Dispatcher-types-from-aiogram-utils-import-executor-from-1739362988452.txt
