[project]
name = "telegram-resale-bot"
version = "0.1.0"
description = "Telegram bot for managing resale topics"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.0.0",
    "flask==2.0.1",
    "aiohttp>=3.8.0",
    "python-dotenv>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"